src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Client and Partner Leads</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Expert Leads</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Dead</fullName>
        </values>
        <values>
            <fullName>Interviewing</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Validating</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Achievement_Count__c</fullName>
        <label>Achievement Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_on_Independent_Freelancing__c</fullName>
        <label>Comments on Independent/Freelancing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Use_of_3rd_Party_SFDC_Resources__c</fullName>
        <label>Current Use of 3rd-Party SFDC Resources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>SFDC App Experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interview_Availability_1__c</fullName>
        <label>Interview Availability 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Availability_2__c</fullName>
        <label>Interview Availability 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Availability_3__c</fullName>
        <label>Interview Availability 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Lead_Converted__c</fullName>
        <formula>IsConverted</formula>
        <label>Is Lead Converted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_Corporation__c</fullName>
        <label>LLC/Corporation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Achievement_Sync__c</fullName>
        <label>Last Achievement Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Lead Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_time_Independent__c</fullName>
        <label>Length of time Independent</label>
        <picklist>
            <picklistValues>
                <fullName>0-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 or More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No experience</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Num_of_Employees_Focused_on_Salesforce__c</fullName>
        <label>Num of Employees Focused on Salesforce</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Projects__c</fullName>
        <label>Number of Projects</label>
        <picklist>
            <picklistValues>
                <fullName>1-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 or More</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Tier__c</fullName>
        <label>Partner Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Global Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <label>Referral Code</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <globalPicklist>Referral_Source</globalPicklist>
        <label>Referral Source</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_URL__c</fullName>
        <formula>IF(
  NOT(ISBLANK(Referral_Code__c)),
  HYPERLINK(&quot;http://www.10kview.com/?rc=&quot; &amp; Referral_Code__c, &quot;http://www.10kview.com/?rc=&quot; &amp; Referral_Code__c),
  null
)</formula>
        <label>Referral URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <globalPicklist>Role</globalPicklist>
        <label>Role</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roles_Other__c</fullName>
        <label>Roles Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Edition__c</fullName>
        <label>Salesforce Edition</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_Products_Used__c</fullName>
        <label>Salesforce Products Used</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesforceIQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SteelBrick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pardot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desk.com</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_Work_Date__c</fullName>
        <label>Salesforce Work Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed NDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skype_Id__c</fullName>
        <label>Skype Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strengths_Areas_of_Interest__c</fullName>
        <label>SFDC Skills &amp; Project Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_Profile_URL__c</fullName>
        <label>Trailhead Profile URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_User_Id__c</fullName>
        <label>Trailhead User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Username__c</fullName>
        <label>Twitter Username</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SI / ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Validating_Date__c</fullName>
        <label>Validating Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Virtually_Worked__c</fullName>
        <label>Virtually Worked</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webassessor_ContactId__c</fullName>
        <label>Webassessor ContactId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webassessor_Email__c</fullName>
        <label>Webassessor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Website_Blog_Link__c</fullName>
        <label>Website/Blog Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>What_type_of_help_are_you_looking_for__c</fullName>
        <label>What type of help are you looking for?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Willing_to_Setup_LLC_Corporation__c</fullName>
        <label>Willing to Setup LLC/Corporation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worked_with_Vendors__c</fullName>
        <label>Worked with Vendors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Subscriber_Org_Type__c</fullName>
        <description>The Edition of this org. UE, EE, PE, TE, Free</description>
        <label>Subscriber Org Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All New Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>DoubleClick_Leads_All</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>DSM,Doubleclick,Package,Install</value>
        </filters>
        <label>DoubleClick Leads - All</label>
    </listViews>
    <listViews>
        <fullName>DoubleClick_Leads_Open</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>DSM,Doubleclick,Package,Install</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>DoubleClick Leads - Open</label>
    </listViews>
    <listViews>
        <fullName>Experts_Leads_India</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Region__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Salesforce_Work_Date__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Achievement_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>Experts Leads - India</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Interviewing_Status</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Region__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Salesforce_Work_Date__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Interviewing</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Interviewing Status</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>New_Expert_Leads_This_Week</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Role__c</columns>
        <columns>Salesforce_Work_Date__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Expert</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>New Expert Leads This Week</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Qualified_Expert_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Role__c</columns>
        <columns>Salesforce_Work_Date__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Expert</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualified,Validating,Interviewing,Contracting</value>
        </filters>
        <label>Qualified Expert Leads</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>Validating_Status</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Region__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Salesforce_Work_Date__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Roles__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Validating</value>
        </filters>
        <filters>
            <field>Achievement_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Validating Status</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <businessProcess>Client and Partner Leads</businessProcess>
        <label>Direct Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>DoubleClick_for_Salesforce</fullName>
        <active>true</active>
        <businessProcess>Client and Partner Leads</businessProcess>
        <label>DoubleClick for Salesforce</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expert</fullName>
        <active>true</active>
        <businessProcess>Expert Leads</businessProcess>
        <label>Delivery Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>SI_ISV</fullName>
        <active>true</active>
        <businessProcess>Client and Partner Leads</businessProcess>
        <label>Partner Client</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>